<resources>
    <string name="app_name">HomeworkInputControl_Andrea</string>

    <string name="chocolate_syrup">Chocolate syrup</string>
    <string name="sprinkles">Sprinkles</string>
    <string name="crushed_nuts">Crushed nuts</string>
    <string name="cherries">Cherries</string>
    <string name="orio_cookie_crumbes">Orio cookie crumbes</string>
    <string name="show_toast">Show Toast</string>
</resources>